# dune-pybindxi

./: .pylicense-cpp.py  .pylicense-other.py  CMakeLists.txt  LICENSE  README.md  config.h.cmake  dune-xt.pc.in  dune.module  stamp-vc
cmake/modules/: CMakeLists.txt  DuneXtMacros.cmake  DuneXtPybindxiUtils.cmake
doc/: CMakeLists.txt
doc/doxygen/: CMakeLists.txt  Doxylocal
dune/: CMakeLists.txt
dune/xt/: CMakeLists.txt
dune/xt/python/: interpreter.cc  interpreter.hh
python/: CMakeLists.txt  README  setup.cfg  setup.py.in
python/pybind11/: CMakeLists.txt  common.h
